--- a/pom.xml
+++ b/pom.xml
@@ -4,64 +4,45 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>io.sporkpgm</groupId>
-	<artifactId>spork</artifactId>
+	<artifactId>SporkPGM</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
 	<properties>
-		<plugin.name>SporkPGM</plugin.name>
 		<plugin.mainClass>io.sporkpgm.Spork</plugin.mainClass>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
-	<repositories>
-		<repository>
-			<id>bukkit-repo</id>
-			<url>http://repo.bukkit.org/content/groups/public/</url>
-		</repository>
-		<repository>
-			<id>maven-repo</id>
-			<url>http://repo1.maven.org/maven2</url>
-		</repository>
-		<repository>
-			<id>overcast-repo</id>
-			<url>https://repo.oc.tc/content/groups/public/</url>
-		</repository>
-	</repositories>
-
 	<dependencies>
 		<dependency>
-			<groupId>tc.oc</groupId>
-			<artifactId>tracker</artifactId>
-			<version>0.1.0-SNAPSHOT</version>
+			<groupId>org.bukkit</groupId>
+			<artifactId>bukkit</artifactId>
+			<version>1.7.2-R0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.bukkit</groupId>
+			<artifactId>craftbukkit</artifactId>
+			<version>1.6.4-R0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sk89q</groupId>
 			<artifactId>command-framework-core</artifactId>
 			<version>0.5-SNAPSHOT</version>
-			<type>jar</type>
 		</dependency>
 		<dependency>
 			<groupId>com.sk89q</groupId>
 			<artifactId>command-framework-bukkit</artifactId>
 			<version>0.5-SNAPSHOT</version>
-			<type>jar</type>
 		</dependency>
 		<dependency>
-			<groupId>dom4j</groupId>
-			<artifactId>dom4j</artifactId>
-			<version>1.6.1</version>
-			<type>jar</type>
-			<scope>compile</scope>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.bukkit</groupId>
-			<artifactId>bukkit</artifactId>
-			<version>1.7.2-R0.3</version>
-		</dependency>
-		<dependency>
-			<groupId>tc.oc</groupId>
-			<artifactId>commons-bukkit</artifactId>
-			<version>0.1.1</version>
+			<groupId>org.luaj</groupId>
+			<artifactId>luaj-jse</artifactId>
+			<version>3.0-beta1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -73,23 +54,68 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.1</version>
 		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>tc.oc</groupId>
+			<artifactId>commons-bukkit</artifactId>
+			<version>0.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>dom4j</groupId>
+			<artifactId>dom4j</artifactId>
+			<version>1.6.1</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
+	<repositories>
+		<repository>
+			<id>repo.oc.tc</id>
+			<url>http://repo.oc.tc/content/groups/public/</url>
+		</repository>
+		<repository>
+			<id>bukkit-repo</id>
+			<url>http://repo.bukkit.org/content/groups/public</url>
+		</repository>
+		<repository>
+			<id>mvnrepo</id>
+			<url>http://mavenrepository.com</url>
+		</repository>
+	</repositories>
+
 	<build>
+		<defaultGoal>clean package</defaultGoal>
+		<resources>
+			<resource>
+				<targetPath>.</targetPath>
+				<directory>${basedir}/src/main/resources/</directory>
+				<filtering>true</filtering>
+				<includes>
+					<include>*.yml</include>
+					<include>*.dat</include>
+				</includes>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
+				<version>2.4</version>
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
+					<showDeprecation>true</showDeprecation>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
-				<version>2.2</version>
+				<version>2.0</version>
 				<executions>
 					<execution>
 						<phase>package</phase>
@@ -97,22 +123,21 @@
 							<goal>shade</goal>
 						</goals>
 						<configuration>
+							<shadedArtifactAttached>false</shadedArtifactAttached>
+							<createDependencyReducedPom>false</createDependencyReducedPom>
 							<artifactSet>
-								<includes>
-									<include>com.sk89q:command-framework-bukkit</include>
-									<include>dom4j:dom4j</include>
-								</includes>
+								<excludes>
+									<exclude>org.bukkit:bukkit</exclude>
+									<exclude>tc.oc:sportbukkit</exclude>
+									<exclude>tc.oc:tracker</exclude>
+									<exclude>org.bukkit:craftbukkit</exclude>
+								</excludes>
 							</artifactSet>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
 		</plugins>
-		<resources>
-			<resource>
-				<filtering>true</filtering>
-				<directory>src/main/resources</directory>
-			</resource>
-		</resources>
 	</build>
+	
 </project>
