--- a/pom.xml
+++ b/pom.xml
@@ -13,15 +13,15 @@
 	</properties>
 
 	<dependencies>
-	<dependency>
-			<groupId>org.bukkit</groupId>
-			<artifactId>bukkit</artifactId>
-			<version>1.7.2-R0.3</version>
+		<dependency>
+			<groupId>tc.oc</groupId>
+			<artifactId>sportbukkit-api</artifactId>
+			<version>1.6.4-R2.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>org.bukkit</groupId>
-			<artifactId>craftbukkit</artifactId>
-			<version>1.6.4-R0.1-SNAPSHOT</version>
+			<groupId>tc.oc</groupId>
+			<artifactId>sportbukkit</artifactId>
+			<version>1.6.4-R2.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sk89q</groupId>
@@ -134,5 +134,5 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 </project>
