--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>io.sporkpgm</groupId>
 	<artifactId>spork</artifactId>
-	<version>1.1.1-SNAPSHOT</version>
+	<version>1.1.1</version>
 
 	<properties>
 		<plugin.name>SporkPGM</plugin.name>
