--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
 			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>tc.oc</groupId>
+			<artifactId>sportbukkit</artifactId>
+			<version>1.7.5-R0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>com.sk89q</groupId>
 			<artifactId>command-framework-core</artifactId>
 			<version>0.5-SNAPSHOT</version>
